--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,22 +1,34 @@
-name: Build and Push to Docker Hub
+name: ${{ github.event_name == 'push' && 'Build and Push to Docker Hub' || (github.event.client_payload.trigger_type == 'auto' && 'Auto-build' || 'Manual-build') }}
 
 on:
-  # 触发条件 1：在 push 到 main 分支时
   push:
     branches:
       [ main ]
     paths:
-      - '**'  # 监控所有文件变更
-  # 触发条件 2：通过 Webhook 手动触发
+      - '**'
   repository_dispatch:
-    types: [docker-build]  # Webhook 事件类型
+    types: [docker-build]
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    # 任务名称动态显示触发详情
+    name: ${{ github.event_name == 'push' && 'Build and Push' || (github.event.client_payload.trigger_type == 'auto' && format('Auto-build: src update on {0}', github.event.client_payload.timestamp) || format('Manual-build: dispatched on {0}', github.event.client_payload.timestamp)) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Display Trigger Source
+        run: |
+          if [ "${{ github.event_name }}" = "push" ]; then
+            echo "This build was triggered by a push to main branch"
+          elif [ "${{ github.event.client_payload.trigger_type }}" = "auto" ]; then
+            echo "This build was triggered automatically due to Docker Hub update at ${{ github.event.client_payload.timestamp }}"
+          elif [ "${{ github.event.client_payload.trigger_type }}" = "manual" ]; then
+            echo "This build was triggered manually via webhook at ${{ github.event.client_payload.timestamp }}"
+          else
+            echo "Unknown trigger source"
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
